base/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app.kubernetes.io/name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
    spec:
      containers:
      - name: app
        image: 904573531492.dkr.ecr.eu-west-1.amazonaws.com/app:c170995
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
