base/api-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-canary
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: api
