base/app-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs
spec:
  hosts:
  - app-test.rabegitops.it
  gateways:
  - app-gateway-test
  http:
  - route:
    - destination:
        host: app-service-test
        port:
          number: 8080
